[gd_scene load_steps=4 format=3 uid="uid://buqe7sesqtmvk"]

[ext_resource type="Texture2D" uid="uid://obm3vpbltxge" path="res://Assets/Art/bubble.png" id="1_a4ql8"]
[ext_resource type="Script" path="res://Scripts/Game/bubble.gd" id="1_r3tjn"]

[sub_resource type="CircleShape2D" id="CircleShape2D_nkq88"]
radius = 131.0

[node name="Bubble" type="Area2D" groups=["Bubbles"]]
script = ExtResource("1_r3tjn")

[node name="BubbleSprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_a4ql8")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_nkq88")

[node name="MarketSprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.75, 0.75)

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_body_entered"]
